--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "deploy": "wrangler publish --env production",
     "start": "wrangler dev"
   },
-  "devDependencies": {
+  "Dependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
     "itty-router": "^4.0.9",
     "typescript": "^5.0.4",
