--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@master
+      - run: npm install
       - name: Publish
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          preCommands: pwd
           command: deploy --env production
           secrets: |
               TOKEN
