--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,7 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@master
-      - run: npm install itty-router
-      - run: npm install zod
+      - run: npm install itty-router zod
       - name: Publish
         uses: cloudflare/wrangler-action@2.0.0
         with:
