--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@master
-      - run: npm install itty-router zod
+      - run: npm install
       - name: Publish
         uses: cloudflare/wrangler-action@2.0.0
         with:
