--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "deploy": "wrangler publish --env production",
     "start": "wrangler dev"
   },
-  "Dependencies": {
+  "dependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
-    "itty-router": "^4.0.9",
     "typescript": "^5.0.4",
     "wrangler": "^3.0.0",
-		"prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "itty-router": "^4.0.22",
+    "zod-validation-error": "^1.5.0"
   }
 }
